--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
 
     <body>
         <div id="top">
-            <h1>EmulatorJS Demo</h1>
-            <img src="docs/Logo-light.png" alt="Logo" class="logo">
+            <h1>EmulatorJS</h1>
         </div>
         <div id = box>
             <input type = file id = input>
