--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
                             "Commodore 128": "vice_x128",
                             "Commodore VIC20": "vice_xvic",
                             "Commodore Plus/4": "vice_xplus4",
+				"OpenBOR": "openbor",
                             "Commodore PET": "vice_xpet"
                         }
 
