--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                             "Commodore VIC20": "vice_xvic",
                             "Commodore Plus/4": "vice_xplus4",
 				"OpenBOR": "openbor",
+				"Arcade": "arcade",
                             "Commodore PET": "vice_xpet"
                         }
 
