--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
                 window.EJS_player = "#game";
                 window.EJS_gameName = parts.shift();
-                window.EJS_biosUrl = "https://www.retrogames.cc/bios/arcade.7z";
+                window.EJS_biosUrl = "";
                 window.EJS_gameUrl = url;
                 window.EJS_core = core;
                 window.EJS_pathtodata = "data/";
