--- a/game.html
+++ b/game.html
@@ -56,11 +56,11 @@
 	<script>
 		
 		EJS_player = "#game";
-		EJS_core = "nes";
+		EJS_core = "arcade";
 		EJS_gameName = "Rockman 2 (Taiwan) (En) (Rockman 123)";
 		EJS_startOnLoaded = false;
 		EJS_pathtodata = "https://raw.githack.com/EmulatorJS/EmulatorJS/main/data/"
-		EJS_gameUrl = "https://ia804700.us.archive.org/cors_get.php?path=/29/items/nointro.nes-headered/Rockman%202%20%28Taiwan%29%20%28En%29%20%28Rockman%20123%29.7z";
+		EJS_gameUrl = "https://archive.org/download/2020_01_06_fbn/roms/arcade.zip/arcade%2F3countb.zip";
 		EJS_gameID = 2828;
 	</script>
 	<script src="https://raw.githack.com/EmulatorJS/EmulatorJS/main/data/loader.js"></script>
