--- a/demo.html
+++ b/demo.html
@@ -167,7 +167,9 @@
 
                     return await new Promise(resolve => {
                         const coreValues = {
-							"Nintendo 64": "n64",
+				"Arcade": "arcade",
+				"Arcade-Mame": "mame2003_plus",
+				"Nintendo 64": "n64",
                             "Nintendo Game Boy": "gb",
                             "Nintendo Game Boy Advance": "gba",
                             "Nintendo DS": "nds",
