--- a/demo.html
+++ b/demo.html
@@ -168,7 +168,7 @@
                     return await new Promise(resolve => {
                         const coreValues = {
 				"Arcade": "arcade",
-				"Arcade-Mame": "mame2003_plus",
+				"Mame": "mame2003_plus",
 				"Nintendo 64": "n64",
                             "Nintendo Game Boy": "gb",
                             "Nintendo Game Boy Advance": "gba",
